Fix bug in which nav items overlap when window is narrower. (#405)

--- a/www/src/css/custom.css
+++ b/www/src/css/custom.css
@@ -20,6 +20,11 @@
 
 /* Navbar for search */
 
+.navbar__items {
+  /* Prevent items from overlapping as window gets narrower. */
+  flex: none;
+}
+
 .navbar__items--right {
   flex-grow: 1;
 }
